avoid styles on non-selected native elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,13 +66,13 @@ section {
   background-color:black;
 }
 
-div {
+/* div {
   background-color:black;
 }
 
 p {
   color: white;
-}
+} */
 
 dt {color: #DC3958;}
 dd {color:lightgrey;}
