--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,29 @@
  * Copyright 2013-2017 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-heroic-features/blob/master/LICENSE)
  */
-
+:root {
+  --lite: #92989e;
+  --dark: #32373c;
+  --darker: #1a1e20;
+}
 body {
   /* apply custom rules to the body here */
 }
 
 header {
   padding: 154px 0 100px;
+}
+
+.bg-dark {
+  background-color: var(--dark);
+}
+
+.bg-darker {
+  background-color: var(--darker);
+}
+
+.bg-lite {
+  background-color: var(--lite);
 }
 
 a {
