--- a/css/styles.css
+++ b/css/styles.css
@@ -62,9 +62,9 @@ a:hover {
 }
 
 .card-img-top {
-  border-radius: 25px 25px 0px 0px;
+  border-radius: 1rem 1rem 0 0;
 }
-
+/* 
 .h-100 {
   border-radius: 25px 25px 25px 25px;
   border-color: grey;
@@ -73,7 +73,7 @@ a:hover {
 
 .card-body {
   border-radius: 0px 0px 25px 25px;
-}
+} */
 
 .text-white {background-color: black;}
 
