sync background colors

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,11 +75,11 @@ a:hover {
   border-radius: 0px 0px 25px 25px;
 } */
 
-.text-white {background-color: black;}
+/* .text-white {background-color: black;} */
 
 section {
   padding: 80px 0;
-  background-color:black;
+  /* background-color:black; */
 }
 
 /* div {
